<resources>
    <string name="app_name">E-parishad_B</string>
    <string name="copyright">© 2021 by CentureonIT. All Rights Reserved. </string>
    <string name="income">Income (BDT)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="income_from_2nd_occupation_bdt">Income from 2nd occupation</string>
    <string name="email">Email</string>
    <string name="income_from_main_occupation_bdt">Income from main occupation</string>
    <string name="todo">TODO</string>
    <string name="example_email_com">example@email.com</string>
    <string name="_08801xxxxxxxxxx">+08801XXXXXXXXXX</string>
    <string name="additional_income_bdt">Additional Income</string>
    <string name="mobile_no">Mobile No</string>
    <string name="branch_name">Branch Name</string>
    <string name="bank_detail">Bank Detail</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No</string>
    <string name="business_detail">Business Detail</string>
    <string name="type_of_business">Type of Business</string>
    <string name="business_name">Business Name</string>
    <string name="source_of_income">Source of Income</string>
    <string name="trade_licence_number">Trade Licence Number</string>
    <string name="photo_of_the_trade_licence">Photo of the Trade Licence</string>
    <string name="business_address">Business Address</string>
    <string name="business_start_date">Business Start Date</string>
    <string-array name="day">
        <item>Day</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year">
        <item>Year</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
    </string-array>
    <string name="any_disability">Any disability</string>
    <string name="blind">Blind</string>
    <string name="deaf">Deaf</string>
    <string name="dumb">Dumb</string>
    <string name="chronic_disease">Chronic Disease</string>
    <string name="special_child">Special Child</string>
    <string name="physically_challenged">Physically Challenged</string>
    <string name="autism">Autism</string>
    <string name="accident">Accident</string>
    <string name="other">Other</string>
    <string name="is_driving_licence_available">Is Driving Licence Available?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="driving_licence_number">Driving Licence Number</string>
    <string name="issuing_authority">Issuing Authority</string>
    <string name="bangladesh_road_transport_authority">Bangladesh Road Transport Authority</string>
    <string name="photo_of_the_driving_licence">Photo of the Driving Licence</string>
    <string name="heighest_education">Heighest Education</string>
    <string name="no_literacy">No Literacy</string>
    <string name="m_phil">M.phil</string>
    <string name="phd">PhD (or equivalent)</string>
    <string name="masters">Masters (or equivalent)</string>
    <string name="takmeel">Takmeel (Masters)</string>
    <string name="honours">Honours (or equivalent)</string>
    <string name="fazil">Fazil (Honours)</string>
    <string name="graduation_4_years">Graduation (4 years)</string>
    <string name="graduation_3_years">Graduation (3 Years)</string>
    <string name="diploma">Diploma</string>
    <string name="hsc">HSC (or equivalent)</string>
    <string name="alim">Alim</string>
    <string name="ssc">SSC (or equivalent)</string>
    <string name="dakhil">Dakhil</string>
    <string name="jsc">Junior school certificate (JSC)</string>
    <string name="jdc">Junior Dakhil Certificate (JDC)</string>
    <string name="psc">Primary School Certificate (PSC)</string>
    <string name="ebtadayee_madrasah_exam">Ebtadayee Madrasah exam</string>
    <string name="sanabia_ulaiya_examination">Sanabia Ulaiya examination</string>
    <string name="technical_and_vocational_education">Technical and Vocational Education</string>
    <string name="mutawassitah">Mutawassitah</string>
    <string name="below_primary">Below Primary</string>
    <string name="hafizia">Hafizia</string>
    <string name="no_schooling">No Schooling</string>
    <string name="can_do_sign_only">Can do Sign only</string>
    <string name="do_you_study_now">Do you study Now?</string>
    <string name="which_level">Which level?</string>
    <string name="select_your_level">Select your level</string>
    <string name="educational_institution">Educational Institution</string>
    <string name="what_you_want_to_be_finishing_your_education">What you want to be finishing your education?</string>
    <string name="is_there_electricity">Is there electricity?*</string>
    <string name="type_of_electricity">Type of Electricity</string>
    <string name="electricity">Electricity</string>
    <string name="solar_power">Solar Power</string>
    <string name="khana_survey">Khana Survey</string>
    <string name="sn">SN</string>
    <string name="creation_date">Creation Date</string>
    <string name="survey_id">Survey ID</string>
    <string name="khana_head">Khana Head</string>
    <string name="holding_no">Holding No</string>
    <string name="khana_no">Khana No</string>
    <string-array name="village">
        <item>None</item>
        <item>চৌধুরীখলা</item>
        <item>পশ্চিম কাচার</item>
        <item>শ্রীবিদ্যা</item>
        <item>ভাঙ্গামুড়া</item>
        <item>মধ্যম বিজয়পুর</item>
        <item>নোয়াপাড়া</item>
        <item>ধরনীবন্ধ</item>
        <item>উত্তর বিজয়পুর</item>
        <item>ধনমুড়া</item>
        <item>লালমতি</item>
        <item>জামমুড়া</item>
        <item>বৈষ্ণবমুড়া</item>
        <item>হোসেনপুর</item>
        <item>কিছমত</item>
        <item>সুধন্যপুর</item>
        <item>সানন্দা</item>
        <item>গাবতলী</item>
        <item>সাওড়াতলী</item>
        <item>ঘোষগাঁও</item>
        <item>সুলতানপুর</item>
        <item>হাড়াতলী</item>
        <item>কৃষ্ণপুর</item>
        <item>তুলাতলী</item>
        <item>লালমাই</item>
        <item>রাজার খলা</item>
        <item>রামনগর</item>
    </string-array>
    <string-array name="ward">
        <item>None</item>
        <item>Ward 1</item>
        <item>Ward 2</item>
        <item>Ward 3</item>
        <item>Ward 4</item>
        <item>Ward 5</item>
        <item>Ward 6</item>
        <item>Ward 7</item>
        <item>Ward 8</item>
        <item>Ward 9</item>
    </string-array>
    <string name="familly_planning_detail">Familly Planning Detail</string>
    <string name="is_eligible_couple_n_wife_s_age_between_18_to_49">Is eligible couple\n(Wife\'s age between 18 to 49)</string>
    <string name="have_you_taken_any_family_planning">Have you taken any family planning</string>
    <string name="zero">0</string>
    <string name="aush">Aush</string>
    <string name="aman">Aman</string>
    <string name="relation_with_khana_head">Relation With Khana Head</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="grand_father">Grand Father</string>
    <string name="grand_mother">Grand Mother</string>
    <string name="great_grand_father">Great Grand Father</string>
    <string name="great_grand_mother">Great Grand Mother</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="grand_daughter">Grand Daughter</string>
    <string name="grand_son">Grand Son</string>
    <string name="husband">Husband</string>
    <string name="self">Self</string>
    <string name="wife">Wife</string>
    <string name="sister_in_law">Sister In Law</string>
    <string name="brother_in_law">Brother In Law</string>
    <string name="father_in_law">Father In Law</string>
    <string name="mother_in_law">Mother In Law</string>
    <string name="daughter_in_law">Daughter In Law</string>
    <string name="son_in_law">Son In Law</string>
    <string name="niece">Niece</string>
    <string name="nephew">Nephew</string>
    <string name="grand_daughter_in_law">Grand Daughter-in-law</string>
    <string name="grand_son_in_law">Grand Son-in-law</string>
</resources>