<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:onClick="hideKeyboard"
    tools:context=".Activity.Members.MemberRelationWithKhanaHeadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_baseline_dehaze_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/relation_with_khana_head"
                                android:textSize="26sp"
                                android:layout_marginBottom="16dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                            <RadioGroup
                                android:id="@+id/relationRg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/father"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mother"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_father"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_mother"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/great_grand_father"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/great_grand_mother"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/brother"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sister"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/son"
                                    android:textSize="20sp"/>
                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/daughter"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_daughter"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_son"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/husband"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/self"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wife"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sister_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/brother_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/father_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mother_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/daughter_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/son_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/niece"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nephew"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_daughter_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/grand_son_in_law"
                                    android:textSize="20sp"/>

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/other"
                                    android:textSize="20sp"/>
                            </RadioGroup>

                        </LinearLayout>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="150dp">
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#424141"
                                android:text="@string/previous"
                                android:onClick="goToPreviousActivity"
                                android:textSize="26sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#424141"
                                android:text="@string/next"
                                android:onClick="goToNextActivity"
                                android:textSize="26sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>